# Debaite

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  miau.txt  pyproject.toml
.github/workflows/: ci.yml
backend/: .env-dist  Dockerfile  pyproject.toml  run_batch.py
backend/app/: main.py
backend/app/routers/: providers.py
backend/debates/: base.py  logger.py
backend/debates/enums/: attitude_type.py  brain_type.py  ethnicity_type.py  gender_type.py  mindset_type.py  moderator_action.py  role_type.py
backend/debates/models/: __init__.py  debater.py  moderator.py  participant.py  results.py
backend/tests/: test_api.py  test_debate.py
debate_configurations/: mmt_vs_orthodoxy.json
debates/: base.py
debates/enums/: __init__.py
debates/models/: intervention.py  participant.py  position_change_check.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/debate/: page.tsx
frontend/app/results/: page.tsx
frontend/components/: DebateConfig.tsx  sidebar.tsx
frontend/components/ui/: button.tsx  input.tsx  toaster.tsx
