
[project]
name = "debaite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.79.0",
    "faker==40.4.0",
    "fastapi==0.128.8",
    "google-generativeai==0.8.6",
    "ipython==9.10.0",
    "litellm==1.81.9",
    "openai==2.17.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "sse-starlette==3.2.0",
    "uvicorn==0.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "debates*"]

[dependency-groups]
dev = []
